@@ -1,19 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_actions" meta_type="Plone Actions Tool"
-        xmlns:i18n="http://xml.zope.org/namespaces/i18n">
-
-  <object name="folder_buttons" meta_type="CMF Action Category">
-    <object name="reset_tableconfiguration" meta_type="CMF Action"
-            i18n:domain="opengever.tabbedview">
-      <property name="title" i18n:translate="">Reset Tableconfiguration</property>
-      <property name="description" i18n:translate=""></property>
-      <property name="url_expr">string:javascript:reset_grid_state()</property>
-      <property name="icon_expr"></property>
-      <property name="available_expr"></property>
-      <property name="permissions">
-        <element value="View"/>
-      </property>
-      <property name="visible">True</property>
-    </object>
-  </object>
-</object>
