@@ -8,8 +8,4 @@
               expression="" id="++resource++opengever.tabbedview-resources/tasklisting.js"
               insert-after="++resource++ftw.tabbedview-resources/tabbedview.js"
               inline="False"/>
-  <javascript cacheable="True" compression="safe" cookable="True" enabled="on"
-              expression="" id="++resource++opengever.tabbedview-resources/reset_gridstate.js"
-              insert-after="++resource++ftw.tabbedview-resources/tabbedview.js"
-              inline="False"/>
 </object>
