@@ -5,7 +5,8 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Removed reset_grid_state functionality, because it's now part of the ftw.tabbedview.
+  [phgross]
 
 
 2.1.2 (2012-03-28)
